framec_tests/language_specific/csharp/v3_mir/positive/transition_inline_line_comment.frm
@target csharp

system S {
    machine:
        $A {
            e() {
                -> $B() // comment ok
            }
        }
        $B {
        }
}
