framec_tests/language_specific/csharp/v3_mir/negative/transition_invalid_state_ident.frm
@target csharp

system S {
    machine:
        $A {
            e() {
                -> $1Bad()
            }
        }
}

